enable debug info on windows in Game

--- a/win/Game/Game.vcxproj
+++ b/win/Game/Game.vcxproj
@@ -83,6 +83,7 @@
     <Link>
       <AdditionalDependencies>Asteria.lib;Hecate.lib;Entropy.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
