updates to project files

--- a/win/Asteria/Asteria.vcxproj
+++ b/win/Asteria/Asteria.vcxproj
@@ -24,13 +24,12 @@
     <ClCompile Include="..\..\src\Character\Equipment.cc" />
     <ClCompile Include="..\..\src\Character\Item.cc" />
     <ClCompile Include="..\..\src\Character\Weapon.cc" />
-    <ClCompile Include="..\..\src\Game\Engine\Engine.cc" />
-    <ClCompile Include="..\..\src\Game\Engine\Renderer.cc" />
     <ClCompile Include="..\..\src\Game\Application.cc" />
-    <ClCompile Include="..\..\src\Game\Menu\Explore.cc" />
-    <ClCompile Include="..\..\src\Game\Menu\Fight.cc" />
-    <ClCompile Include="..\..\src\Game\Menu\Main.cc" />
-    <ClCompile Include="..\..\src\Game\Menu\New.cc" />
+    <ClCompile Include="..\..\src\Game\Engine.cc" />
+    <ClCompile Include="..\..\src\Game\Engine\Explore.cc" />
+    <ClCompile Include="..\..\src\Game\Engine\Fight.cc" />
+    <ClCompile Include="..\..\src\Game\Engine\New.cc" />
+    <ClCompile Include="..\..\src\Game\Engine\Title.cc" />
     <ClCompile Include="..\..\src\Map.cc" />
     <ClCompile Include="..\..\src\Map\Cave.cc" />
     <ClCompile Include="..\..\src\Map\Floor.cc" />
@@ -46,14 +45,12 @@
     <ClInclude Include="..\..\src\Character\Stats.hh" />
     <ClInclude Include="..\..\src\Character\Weapon.hh" />
     <ClInclude Include="..\..\src\Exception.hh" />
-    <ClInclude Include="..\..\src\Game\Engine\Engine.hh" />
-    <ClInclude Include="..\..\src\Game\Engine\Menu.hh" />
-    <ClInclude Include="..\..\src\Game\Engine\Renderer.hh" />
     <ClInclude Include="..\..\src\Game\Application.hh" />
-    <ClInclude Include="..\..\src\Game\Menu\Explore.hh" />
-    <ClInclude Include="..\..\src\Game\Menu\Fight.hh" />
-    <ClInclude Include="..\..\src\Game\Menu\Main.hh" />
-    <ClInclude Include="..\..\src\Game\Menu\New.hh" />
+    <ClInclude Include="..\..\src\Game\Engine.hh" />
+    <ClInclude Include="..\..\src\Game\Engine\Explore.hh" />
+    <ClInclude Include="..\..\src\Game\Engine\Fight.hh" />
+    <ClInclude Include="..\..\src\Game\Engine\New.hh" />
+    <ClInclude Include="..\..\src\Game\Engine\Title.hh" />
     <ClInclude Include="..\..\src\Map.hh" />
     <ClInclude Include="..\..\src\Map\Cave.hh" />
     <ClInclude Include="..\..\src\Map\Floor.hh" />
