build against Tethys, Theia, Aoede and Mnemosyne

--- a/configure.ac
+++ b/configure.ac
@@ -25,18 +25,19 @@ AX_PTHREAD
 
 EX_BASE_FLAGS
 
-EX_WITH_ENTROPY
-[LIBS="$ENTROPY_LIBS $LIBS"]
-[LDFLAGS="$ENTROPY_LDFLAGS $LDFLAGS"]
-[CPPFLAGS="$ENTROPY_CPPFLAGS $CPPFLAGS"]
-
-EX_WITH_HECATE
-[LIBS="$HECATE_LIBS $LIBS"]
-[LDFLAGS="$HECATE_LDFLAGS $LDFLAGS"]
-[CPPFLAGS="$HECATE_CPPFLAGS $CPPFLAGS"]
-
 EX_WITH_GTEST
 EX_FLAGS
+
+EX_WITH_ENTROPY
+EX_WITH_HECATE
+EX_WITH_TETHYS
+EX_WITH_THEIA
+EX_WITH_AOEDE
+EX_WITH_MNEMOSYNE
+
+[LIBS="$GTEST_LIBS $ENTROPY_LIBS $HECATE_LIBS $TETHYS_LIBS $THEIA_LIBS $AOEDE_LIBS $MNEMOSYNE_LIBS"]
+[CPPFLAGS="$GTEST_CPPFLAGS $ENTROPY_CPPFLAGS $HECATE_CPPFLAGS $TETHYS_CPPFLAGS $THEIA_CPPFLAGS $AOEDE_CPPFLAGS $MNEMOSYNE_CPPFLAGS"]
+[LDFLAGS="$GTEST_LDFLAGS $ENTROPY_LDFLAGS $HECATE_LDFLAGS $TETHYS_LDFLAGS $THEIA_LDFLAGS $AOEDE_LDFLAGS $MNEMOSYNE_LDFLAGS"]
 
 AC_LANG_POP([C++])
 AC_CONFIG_HEADERS([config.h])
